sumo/tests/duarouter/routes/style2_input/errors/vehicle_empty_departspeed/errors.duarouter
Error: Invalid departspeed definition for vehicle '0'
Quitting (on error).
